--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>listvideo-api</name>
 	<description>ListVideo API provides login, user registration, and certificate generation features for the ListVideo platform.</description>
 	<properties>
-		<java.version>20</java.version>
+		<java.version>19</java.version>
 		<org.projectlombok.version>1.18.26</org.projectlombok.version>
 		<com.auth0.version>4.4.0</com.auth0.version>
 		<org.springdoc.version>2.0.4</org.springdoc.version>
@@ -117,8 +117,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>19</source>
-					<target>19</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
