--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<org.springdoc.version>2.0.4</org.springdoc.version>
 		<org.apache.pdfbox.version>2.0.24</org.apache.pdfbox.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+		<fmt-maven-plugin.version>2.19</fmt-maven-plugin.version>
 	</properties>
 	<dependencies>
        <!--	SPRING	-->
@@ -132,6 +133,19 @@
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>com.spotify.fmt</groupId>
+				<artifactId>fmt-maven-plugin</artifactId>
+				<version>${fmt-maven-plugin.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>format</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
